openshift-deployment/07_route-ocs-photo-album.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  name: ocs-photo-album-git
  labels:
    app: ocs-photo-album-git
    app.kubernetes.io/component: ocs-photo-album-git
    app.kubernetes.io/instance: ocs-photo-album-git
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: ocs-photo-album
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 12-ubi8
spec:
  to:
    kind: Service
    name: ocs-photo-album-git
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
